<resources>
    <string name="app_name">KOMA</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_password">Password</string>
    <string name="zipcode">zipcode</string>
    <string name="bt_maps">Current Location</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_submit">Submit</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="not_yet_a_user_register">Not yet a user? <u>Register now</u></string>
    <string name="FBLogin">Facebook</string>
    <string name="google">Google</string>
    <string name="prompt_password_confirm">Password Confirm</string>
    <string name="auth_failed">Authentication Failed</string>

    <string name="facebook_app_id">159589434555358</string>
    <string name="title_activity_loc">LocActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="postAd">Post Ad</string>


</resources>
